--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "framer-motion": "^12.4.3",
+    "quagga": "^0.12.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.0.0",
+    "react-speech-recognition": "^3.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
